[gd_scene load_steps=12 format=2]

[ext_resource path="res://res/Assets/Popup/SelectedMenu/Próximo.png" type="Texture" id=1]
[ext_resource path="res://res/Font/londrinasolid_108.tres" type="DynamicFont" id=2]
[ext_resource path="res://res/rapid_mode_screen.gd" type="Script" id=3]
[ext_resource path="res://res/popups/RapidModeGuidePopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://res/popups/ContinuePopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://res/Assets/Buttons/Reiniciar.png" type="Texture" id=6]
[ext_resource path="res://res/Texture.tscn" type="PackedScene" id=7]
[ext_resource path="res://res/Assets/Buttons/Menu.png" type="Texture" id=8]
[ext_resource path="res://res/popups/ModesPopUp.tscn" type="PackedScene" id=9]
[ext_resource path="res://res/Assets/Sounds/Clique botões.wav" type="AudioStream" id=10]
[ext_resource path="res://res/fade_in/FadeIn.tscn" type="PackedScene" id=11]

[node name="RapidModeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -645.0
margin_bottom = -360.0
rect_scale = Vector2( 1.5, 1.5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Texture" parent="." instance=ExtResource( 7 )]
margin_left = -3404.0
margin_top = -1892.93
margin_right = 4579.0
margin_bottom = 2607.07
rect_scale = Vector2( 0.2, 0.2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 77.5
margin_top = 67.0
margin_right = 1207.5
margin_bottom = 652.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1130.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 1130.0
margin_bottom = 129.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 565.0
margin_right = 565.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.482353, 0, 0.521569, 1 )

[node name="Timer" type="Timer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Label"]
wait_time = 0.1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 1130.0
margin_bottom = 570.0
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 353.0
margin_right = 777.0
margin_bottom = 426.0
rect_min_size = Vector2( 424, 426 )
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 424.0
margin_bottom = 426.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/CenterContainer"]
margin_left = 212.0
margin_top = 213.0
margin_right = 212.0
margin_bottom = 213.0

[node name="Sprite" type="Sprite" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/CenterContainer"]
position = Vector2( 212, 213 )
scale = Vector2( 0.58, 0.58 )

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 585.0
margin_right = 1130.0
margin_bottom = 585.0
custom_constants/separation = 0

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 77.5
margin_top = 574.0
margin_right = 1207.5
margin_bottom = 686.0
size_flags_horizontal = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="Button" parent="VBoxContainer2"]
margin_left = 1011.0
margin_right = 1130.0
margin_bottom = 112.0
focus_mode = 0
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 1162.0
margin_top = 53.0
margin_right = 1252.0
margin_bottom = 107.0
rect_scale = Vector2( 0.667, 0.667 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 1094.0
margin_top = 47.0
margin_right = 1164.0
margin_bottom = 117.0
rect_scale = Vector2( 0.667, 0.667 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RapidModeGuidePopup" parent="." instance=ExtResource( 4 )]
visible = false

[node name="ContinuePopup" parent="." instance=ExtResource( 5 )]

[node name="ModesPopUp" parent="." instance=ExtResource( 9 )]

[node name="FadeIn" parent="." instance=ExtResource( 11 )]
visible = false
[connection signal="timeout" from="HBoxContainer/VBoxContainer/HBoxContainer/Label/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="VBoxContainer2/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="hide" from="RapidModeGuidePopup" to="." method="_on_RapidModeGuidePopup_hide"]
[connection signal="hide" from="ModesPopUp" to="." method="_on_ModesPopUp_hide"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
